# data-new-criminal-filings

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: daily-update.yml
data/processed/: daily-data-combined.csv  daily-data-historical.csv  portal-results-historical.csv
data/raw/: latest-data.csv
data_new_criminal_filings/: __init__.py  __main__.py  core.py
scripts/: process.py
