[tool.poetry]
name = "data-new-criminal-filings"
version = "0.1.0"
description = "About"
authors = ["Nick Hand <nick.hand@phila.gov>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.3.5"
loguru = "^0.5.3"
beautifulsoup4 = "^4.10.0"
click = "^8.0.3"
phl-courts-scraper = {git = "https://github.com/PhilaController/phl-courts-scraper.git", rev = "master"}
phl-courts-scraper-batch = {git = "https://github.com/PhilaController/phl-courts-scraper-batch.git", rev = "main"}

[tool.poetry.dev-dependencies]
jupyterlab = "^3.2.5"
ipython = "^7.30.1"
retrolab = "^0.3.14"
black = "^21.12b0"
isort = "^5.10.1"
jupyterlab-code-formatter = "^1.4.10"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
new-criminal-filings = "data_new_criminal_filings.__main__:cli"